Fix uneven footer list padding

--- a/css/style.sass
+++ b/css/style.sass
@@ -213,10 +213,8 @@ footer
     display: inline-block
     text-align: left
     vertical-align: top
-    &:nth-of-type(4)
+    &:nth-of-type(4), &:nth-of-type(6)
       padding-top: 1.57em
-    &:nth-of-type(6)
-      vertical-align: bottom
   a
     text-decoration: none
     color: inherit
